--- a/SiteDownloader/SiteDownloader.csproj
+++ b/SiteDownloader/SiteDownloader.csproj
@@ -43,15 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BetweenDomainTransition.cs" />
-    <Compile Include="ContentSaver.cs" />
-    <Compile Include="Downloader.cs" />
-    <Compile Include="Events\FileFoundedEventArgs.cs" />
+    <Compile Include="SiteDownloader.cs" />
+    <Compile Include="Events\ItemFoundedEventArgs.cs" />
     <Compile Include="Events\FileLoadedEventArgs.cs" />
     <Compile Include="Events\HtmlDocumentLoadedEventArgs.cs" />
+    <Compile Include="ISiteDownloader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="Events\UrlFoundedEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
