--- a/CUI/CUI.csproj
+++ b/CUI/CUI.csproj
@@ -48,13 +48,16 @@
   <ItemGroup>
     <Compile Include="Constraints\FileTypesConstraint.cs" />
     <Compile Include="ContentSaver.cs" />
-    <Compile Include="CrossDomainTransition.cs" />
+    <Compile Include="Enums\CrossDomainTransition.cs" />
     <Compile Include="Constraints\CrossDomainTransitionConstraint.cs" />
-    <Compile Include="ConstraintType.cs" />
-    <Compile Include="IConstraint.cs" />
+    <Compile Include="Enums\ConstraintType.cs" />
+    <Compile Include="Interfaces\IConstraint.cs" />
+    <Compile Include="Interfaces\IContentSaver.cs" />
+    <Compile Include="Interfaces\ILogger.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Mainprg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
